--- a/project3/styles/style.css
+++ b/project3/styles/style.css
@@ -20,13 +20,17 @@
      border-radius: 2rem;
      box-shadow: 0px 2px 0px 2px rgba(0,0, 0,0.10);
     cursor: pointer;
-
+    transition: all 0.3s ease;
+}
+.download-button2 .download1:hover{
+    transform: scale(1.08);
 }
 .lobe-header{
     margin: 0 auto;
     text-align: center;
     margin-top: 60px;
     width: 80%;
+    height: 700px;
 }
 .lobe-header h2{
     text-transform: capitalize;
@@ -65,7 +69,7 @@ div.video-con{
 div.video-con:hover{
     background-color: rgba(92, 91, 91, 0.1);
     transform: scale(1.02);
-    box-shadow: 0px 50px 35px 20px  rgba(0,0, 0,0.05);
+    box-shadow: 0px 40px 35px 30px  rgba(0,0, 0,0.06);
 }
 
 div.embeded-video-con{
